ffi/derive/tests/ui_fail/self_consuming_method.stderr
error: Methods which consume self not supported
  --> tests/ui_fail/self_consuming_method.rs:10:1
   |
10 | #[ffi_bindgen]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `ffi_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStructBuilder__new` in this scope
  --> tests/ui_fail/self_consuming_method.rs:25:25
   |
7  | struct FfiStructBuilder;
   | ------------------------ similarly named unit struct `FfiStructBuilder` defined here
...
25 |     if FfiResult::Ok != FfiStructBuilder__new(s_builder.as_mut_ptr()) {
   |                         ^^^^^^^^^^^^^^^^^^^^^ help: a unit struct with a similar name exists: `FfiStructBuilder`

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStructBuilder__build` in this scope
  --> tests/ui_fail/self_consuming_method.rs:31:25
   |
7  | struct FfiStructBuilder;
   | ------------------------ similarly named unit struct `FfiStructBuilder` defined here
...
31 |     if FfiResult::Ok != FfiStructBuilder__build(s_builder, s.as_mut_ptr()) {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^ help: a unit struct with a similar name exists: `FfiStructBuilder`
